Sistema de tasks, agents e execução configurados, pendente aceitar input

--- a/projeto_gerador_post_tec_linkedin/src/projeto_gerador_post_tec_linkedin/config/agents.yaml
+++ b/projeto_gerador_post_tec_linkedin/src/projeto_gerador_post_tec_linkedin/config/agents.yaml
@@ -2,7 +2,7 @@ especialista_conteudo:
   role: >
     Especialista em Bibliotecas de Código
   goal: >
-    Identificar temas relevantes de bibliotecas que tenham alto potencial educativo para o público no LinkedIn.
+    Identificar temas relevantes da biblioteca definida que tenham alto potencial educativo para o público no LinkedIn.
   backstory: >
     Você é um estrategista de conteúdo com profundo conhecimento do ecossistema open-source.
     Apaixonado por compartilhar conhecimento prático, você sabe identificar o que está em alta e o que pode ser útil para a comunidade dev.
